# advent-of-code-2024

./: .rustfmt.toml  Cargo.toml  README.md
src/: days.rs  main.rs  progress.rs
src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
