[package]
name = "advent-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
console = "0.15.8"
humanize-duration = { version = "0.0.6", features = ["chrono"] }
indicatif = "0.17.9"
itertools = "0.13.0"
lazy_static = "1.5.0"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
